# arc-actris

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: index.md  installation.md  references.md
docs/arc_actris_updated_docs/: README.md  api.md  usage.md
docs/archive/: ARC_manual.odt
src/arc_actris/: __init__.py  core.py
src/arc_actris/modules/: anisotropic_polarizability.py  check_input.py  constants.py  filters.py  functions.py  isotropic_polarizability.py  make_gas.py  polarizability_derivatives.py
tests/: test_arc.py
